--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start --openssl-legacy-provider",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,3 +38,6 @@
     ]
   }
 }
+
+
+// "start": "react-scripts start --openssl-legacy-provider",
